#77 use JVM instrumentation if available for adding Neo4j plugin jars to classloaders