@@ -7,7 +7,5 @@ if "%JAVA_HOME%" == "" (
 )
 
 set JQASSISTANT_HOME=%~dp0%\..
-rem Required for Neo4j Plugin class loading in Neo4jServerFactory
-set JQASSISTANT_JVM_ARGS=--add-opens java.base/jdk.internal.loader=ALL-UNNAMED
 
-%JAVA_CMD% %JQASSISTANT_JVM_ARGS% %JQASSISTANT_OPTS% -jar "%JQASSISTANT_HOME%\lib\${project.groupId}-${project.artifactId}-${project.version}.${project.packaging}" %*
+%JAVA_CMD% %JQASSISTANT_OPTS% -jar "%JQASSISTANT_HOME%\lib\${project.groupId}-${project.artifactId}-${project.version}.${project.packaging}" %*
